轮次10优化：修复终审报告全部问题（4P0+2P1+5P2+功能增强）
P0修复：
- findNotDeletedAllStream() 假流式查询标记 @Deprecated，移除误导性实现
- ProjectionSpec 删除未使用的 havingPredicates 死代码字段
- GROUP BY + HAVING 计数查询改用 countDistinct，修复分页计数不准确
- 流式查询自动设置 fetchSize（PostgreSQL=100, MySQL=MIN_VALUE）

P1修复：
- MergeSpec.executeBatchInSeparateTransactions 添加 Spring 事务检查，JTA 环境防护
- SoftDeleteJpaRepository.deleteInBatch 添加 InaccessibleObjectException 捕获

P2修复：
- InClauseBuilder 简化冗余的 warningThreshold 条件判断
- ConditionBuilder SAFE_NESTED_FIELD_NAME_PATTERN 正则防止连续点号
- ConditionBuilder 新增 containsIgnoreCase 方法
- ProjectionSpec 新增 distinct() 方法支持 SELECT DISTINCT
- MergeSpec JTA 环境明确异常提示

构建验证：Spotless通过，SpotBugs 0 bugs，JaCoCo达标，862测试全部通过